[package]
name = "hn"
version = "0.1.0"
authors = ["skswanke <skswanke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde_json = "1.0"
colored = "1.9"
